tests/snapshots/output__add_refuses_to_seal_the_vault_shut.snap
---
source: tests/output.rs
expression: "repo.vault(&[\"add\", \".gitattributes\"]).failed()"
---
git-vault: `.gitattributes` cannot be sealed: the repository needs it to open the vault at all
