tests/snapshots/output__diff_renders_one_hunk_per_secret.snap
---
source: tests/output.rs
expression: "repo.vault(&[\"diff\"]).ok()"
---
secrets/added.env (added)
  @@ -0,0 +1 @@
  +brand new
secrets/deep/nested.key (removed)
  @@ -1 +0,0 @@
  -inner
secrets/prod.env (changed)
  @@ -1 +1 @@
  -STRIPE_KEY=sk_live_example
  +STRIPE_KEY=sk_live_rotated
