tests/snapshots/output__keys_marks_which_recipient_is_you.snap
---
source: tests/output.rs
expression: "shape.join(\"\\n\")"
---
age1… alice@work
age1… test@example.com (you)

2 recipients in .vault/recipients
