tests/snapshots/output__locking_reports_what_it_removed.snap
---
source: tests/output.rs
expression: "repo.vault(&[\"lock\"]).ok()"
---
Locked. Removed 2 plaintext files.
