tests/snapshots/output__log_shows_the_history_of_a_secret.snap
---
source: tests/output.rs
expression: "shape.join(\"\\n\")"
---
<commit> add the stripe key
secrets/prod.env (added)
  @@ -0,0 +1 @@
  +STRIPE=one

<commit> rotate the stripe key
secrets/prod.env (changed)
  @@ -1 +1 @@
  -STRIPE=one
  +STRIPE=two
