tests/snapshots/output__ls_lists_what_is_sealed.snap
---
source: tests/output.rs
expression: "repo.vault(&[\"ls\"]).ok()"
---
        6  file  secrets/deep/nested.key
       27  file  secrets/prod.env

2 secrets in .vault/data
