tests/snapshots/output__ls_says_so_when_nothing_is_sealed_yet.snap
---
source: tests/output.rs
expression: "repo.vault(&[\"ls\"]).ok()"
---
Nothing is sealed yet. Declare something with `git vault add`.
