tests/snapshots/output__ls_when_locked.snap
---
source: tests/output.rs
expression: run.stdout()
---
Locked, so the inventory cannot be read. Run `git vault unlock`.
